# VerySimpleHttpServer

./: .gitignore  CMakeLists.txt  README.md
inc/: common.h  http.h  httpserver.h  service.h  ws.h
release/: httpserver
release/public/: index.html
src/: CMakeLists.txt
src/framework/: common.c  http.c  httpserver.c  service.c  ws.c
src/user/: service_user.c  service_user.h
